--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,6 +14,7 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@ai-sdk/google": "1.2.22",
     "@ai-sdk/openai": "^1.3.23",
     "@clerk/backend": "^2.6.1",
     "@convex-dev/agent": "^0.1.16",
