--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,6 +21,7 @@
     "@convex-dev/agent": "^0.1.16",
     "@convex-dev/agent-playground": "^0.0.20",
     "@convex-dev/rag": "^0.3.3",
+    "@google-cloud/secret-manager": "^6.1.1",
     "@vapi-ai/server-sdk": "^0.10.2",
     "ai": "4.3.19",
     "convex": "1.25.4",
